feat: finish shape query
