# api-contracts/openapi/components/schemas/workflow_run.yaml
@@ -104,26 +104,30 @@ WorkflowRun:
     - status
     - triggeredBy
 
-WorkflowRunShape:
-  type: array
-  items:
-    type: object
-    properties:
-      parent:
+WorkflowRunShapeItem:
+  type: object
+  properties:
+    parent:
+      type: string
+      format: uuid
+      minLength: 36
+      maxLength: 36
+    children:
+      type: array
+      items:
         type: string
         format: uuid
         minLength: 36
         maxLength: 36
-      children:
-        type: array
-        items:
-          type: string
-          format: uuid
-          minLength: 36
-          maxLength: 36
-    required:
-      - parent
-      - children
+  required:
+    - parent
+    - children
+
+WorkflowRunShape:
+  type: array
+  items:
+    $ref: "#/WorkflowRunShapeItem"
+
 
 WorkflowRunList:
   type: object
