# api/v1/server/oas/transformers/workflow_run.go
@@ -14,70 +14,28 @@ import (
 )
 
 func ToWorkflowRunShape(
-	run *dbsqlc.GetWorkflowRunByIdRow,
-	version *dbsqlc.GetWorkflowVersionByIdRow,
-	jobs []*dbsqlc.ListJobRunsForWorkflowRunFullRow,
-	steps []*dbsqlc.GetStepsForJobsRow,
-	stepRuns []*repository.StepRunForJobRun,
-) *gen.WorkflowRunShape {
-	res := &gen.WorkflowRunShape{
-		Metadata: *toAPIMetadata(
-			sqlchelpers.UUIDToStr(run.ID),
-			run.CreatedAt.Time,
-			run.UpdatedAt.Time,
-		),
-		TenantId:          sqlchelpers.UUIDToStr(run.TenantId),
-		WorkflowVersionId: sqlchelpers.UUIDToStr(run.WorkflowVersionId),
-		DisplayName:       &run.DisplayName.String,
-		Error:             &run.Error.String,
-		Status:            gen.WorkflowRunStatus(run.Status),
-	}
+	shapeRows []dbsqlc.GetWorkflowRunShapeRow,
+) gen.WorkflowRunShape {
+	result := make([]gen.WorkflowRunShapeItem, len(shapeRows))
 
-	if run.StartedAt.Valid {
-		res.StartedAt = &run.StartedAt.Time
-	}
+	for _, shapeRow := range shapeRows {
+		parent := uuid.MustParse(sqlchelpers.UUIDToStr(shapeRow.Parent))
 
-	if run.FinishedAt.Valid {
-		res.FinishedAt = &run.FinishedAt.Time
-	}
+		children := make([]uuid.UUID, len(shapeRow.Children))
 
-	if run.Duration.Valid {
-		duration := int(run.Duration.Int64)
-		res.Duration = &duration
-	}
-
-	if version != nil {
-		// TODO concurrency
-		workflowId := sqlchelpers.UUIDToStr(version.Workflow.ID)
-		res.WorkflowId = &workflowId
-		res.WorkflowVersion = ToWorkflowVersion(&version.WorkflowVersion, &version.Workflow, nil, nil, nil, nil)
-	}
-
-	res.TriggeredBy = *ToWorkflowRunTriggeredBy(run.ParentId, &run.WorkflowRunTriggeredBy)
-
-	if jobs != nil {
-		jobRuns := make([]gen.JobRun, 0)
-
-		for _, jobRun := range jobs {
-			jobRunCp := *jobRun
-			jobRuns = append(jobRuns, *ToJobRun(&jobRunCp, steps, stepRuns))
-
+		for i, child := range shapeRow.Children {
+			children[i] = uuid.MustParse(sqlchelpers.UUIDToStr(child))
 		}
 
-		res.JobRuns = &jobRuns
-	}
-
-	if run.AdditionalMetadata != nil {
-
-		additionalMetadata := make(map[string]interface{})
-		err := json.Unmarshal(run.AdditionalMetadata, &additionalMetadata)
-
-		if err == nil {
-			res.AdditionalMetadata = &additionalMetadata
+		res := gen.WorkflowRunShapeItem{
+			Children: children,
+			Parent:   parent,
 		}
+
+		result = append(result, res)
 	}
 
-	return res
+	return result
 }
 
 func ToWorkflowRun(
